--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
-  <meta name="google-site-verification" content="YnoWpBFRAvaUEohezVTYGXlwX3CSWvVDGJwPJSazkKQ" />
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -346,7 +345,8 @@
             <div class="contact-email">
               <i class="ion-ios-email-outline"></i>
               <h3>Correo Electronico</h3>
-              <p>Correo Empresarial: <a href="mailto:Proyectos@flexotorsion.com">Proyectos@flexotorsion.com</a></p>
+              <p>Correo Empresarial: <a href="mailto:flexotorsion@gmail.com">flexotorsion@gmail.com</a></p>
+              <p>Correo Empresarial: <a href="mailto:flexotorsion@hotmail.com">flexotorsion@hotmail.com</a></p>
             </div>
           </div>
 
