--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <link href="css/style.css" rel="stylesheet">
 
   <!-- =======================================================
-    Theme Name: Ingenieria Moderna
+    Theme Name: Flexotorsion Ingenieria
     License: https://bootstrapmade.com/license/
   ======================================================= -->
 </head>
@@ -418,11 +418,11 @@
             </p>
 
             <div class="social-links">
-              <a href="https://www.twitter.com" class="Twitter"><i class="fa fa-twitter"></i></a>
-              <a href="https://www.facebook.com" class="Facebook"><i class="fa fa-facebook"></i></a>
-              <a href="https://www.instagram.com" class="Instagram"><i class="fa fa-instagram"></i></a>
-              <a href="https://www.youtube.com" class="YouTube"><i class="fa fa-youtube"></i></a>
-              <a href="https://www.linkedin.com" class="Linkedin"><i class="fa fa-linkedin"></i></a>
+              <a href="https://twitter.com/flexotorsion" class="Twitter"><i class="fa fa-twitter"></i></a>
+              <a href="https://facebook.com/flexotorsion.ingenieria.1" class="Facebook"><i class="fa fa-facebook"></i></a>
+              <a href="https://www.instagram.com/flexotorsion" class="Instagram"><i class="fa fa-instagram"></i></a>
+              <a href="https://www.youtube.com/channel/UCq3HydWSwtPz_zjz3DhlRBA" class="YouTube"><i class="fa fa-youtube"></i></a>
+              <a href="https://www.linkedin.com/in/flexotorsion-ingenieria-8070981b2" class="Linkedin"><i class="fa fa-linkedin"></i></a>
             </div>
 
           </div>
