--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
               Santiago <br>
               Rep. Dom. <br>
               <strong>Phone:</strong> +1 809-214-7050<br>
-              <strong>Email:</strong> fletorsion@gmail.com - fletorsion@hotmail.com <br>
+              <strong>Email:</strong> flexotorsion@gmail.com - flexotorsion@hotmail.com<br>
             </p>
 
             <div class="social-links">
